@@ -93,7 +93,7 @@ pam_sm_authenticate(pam_handle_t *pamh, int flags,
 
 	/* Get the user's name. */
 	i = pam_get_user(pamh, &user, NULL);
-	if (i != PAM_SUCCESS) {
+	if ((i != PAM_SUCCESS) || (user == NULL)) {
 		warn("could not identify user name");
 		krb5_free_context(ctx);
 		return i;
